# Cotrader

./: .dockerignore  .gitignore  AGENT_ARCHITECTURE.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  FAQ.md  ISSUES.md  LICENSE  PROJECT_ANALYSIS.md  README.md  SECURITY.md  TESTING.md  UPDATED.md  UPGRADES.md  architecture.md  build.sh  docker-compose.yml  install.sh  start.sh  status.sh  stop.sh  tri_level_reasoning.jsonl  uninstall.sh  workflow.md
crates/cotrader-autonomous/: Cargo.toml  tri_level_reasoning.jsonl
crates/cotrader-autonomous/src/: adaptive_scanner.rs  backtester.rs  circuit_breaker.rs  confluence_scorer.rs  correlation_checker.rs  correlation_engine.rs  debate.rs  debate_layer.rs  deterministic_strategies.rs  drawdown_monitor.rs  episode_store.rs  event_driven_pipeline.rs  execution_coordinator.rs  funding_rate.rs  hard_rules_gate.rs  helpers.rs  lib.rs  liquidity.rs  live_order_manager.rs  market_intelligence.rs  market_metrics_meter.rs  meta_control.rs  mtf_confluence_scorer.rs  multi_timeframe_analyst.rs  news_analyser.rs  on_chain_data.rs  options_surface.rs  orchestrator_phases.rs  orchestrator_pipeline.rs  orchestrator_struct.rs  order_execution.rs  order_flow.rs  outcome_logger.rs  outcome_processor.rs  overtrading_preventer.rs  pattern_retriever.rs  pipeline_runner.rs  pivot_calculator.rs  portfolio_manager.rs  production.rs  (+24 more)
crates/cotrader-autonomous/tests/: debug_100_trades.rs  five_layer_pipeline_integration.rs  no_kronos_no_llm_pipeline.rs  paper_trading_integration.rs  rat_integration.rs  rule_revert_test.rs
crates/cotrader-broker-cotrader/: Cargo.toml
crates/cotrader-broker-cotrader/src/: lib.rs
crates/cotrader-broker-ibkr/: Cargo.toml
crates/cotrader-broker-ibkr/src/: lib.rs
crates/cotrader-eventbus/: Cargo.toml  README.md
crates/cotrader-eventbus/src/: bus.rs  event.rs  lib.rs  subject.rs
crates/cotrader-ml/: Cargo.toml
crates/cotrader-ml/src/: engine.rs  feature_store.rs  lib.rs
crates/cotrader-orchestrator/: Cargo.toml
crates/cotrader-orchestrator/src/: loops.rs  main.rs
crates/cotrader-runtime/: Cargo.toml
crates/cotrader-runtime/src/: active_learner.rs  api_clients.rs  engine.rs  goal_manager.rs  introspector.rs  lib.rs  live_broker.rs  policy_cache.rs  portfolio_reasoner.rs  risk_manager.rs  strategy.rs  streaming_reasoner.rs
crates/cotrader-runtime/tests/: smoke_test.rs
crates/cotrader-tui/: Cargo.toml
crates/cotrader-tui/src/: api_client.rs  app.rs  main.rs  theme.rs
crates/rat-agents/: Cargo.toml
crates/rat-agents/src/: lib.rs
crates/rat-autonomous/: Cargo.toml  README.md  tri_level_reasoning.jsonl
crates/rat-autonomous/src/: backtester.rs  circuit_breaker.rs  confluence_scorer.rs  correlation_checker.rs  debate.rs  debate_layer.rs  deterministic_strategies.rs  drawdown_monitor.rs  episode_store.rs  execution_coordinator.rs  funding_rate.rs  hard_rules_gate.rs  helpers.rs  lib.rs  liquidity.rs  live_order_manager.rs  market_intelligence.rs  market_metrics_meter.rs  meta_control.rs  news_analyser.rs  on_chain_data.rs  options_surface.rs  orchestrator_phases.rs  orchestrator_pipeline.rs  orchestrator_struct.rs  order_execution.rs  order_flow.rs  outcome_logger.rs  overtrading_preventer.rs  pattern_retriever.rs  pipeline_runner.rs  pivot_calculator.rs  portfolio_manager.rs  rat.rs  reconciliation_engine.rs  red_folder_checker.rs  reflector.rs  regime_detector.rs  risk_calculator.rs  risk_guardian.rs  (+13 more)
crates/rat-autonomous/tests/: debug_100_trades.rs  five_layer_pipeline_integration.rs  no_kronos_no_llm_pipeline.rs  paper_trading_integration.rs  rat_integration.rs  rule_revert_test.rs
crates/rat-core/: Cargo.toml  README.md
crates/rat-core/src/: agentmemory.rs  broker.rs  config.rs  disciplined_core.rs  embeddings.rs  lib.rs  llm.rs  memory_integration.rs  paper_engine.rs  service_manager.rs  skills.rs  vector_memory.rs
crates/rat-core/tests/: paper_engine_tests.rs
crates/rat-ecosystem/: Cargo.toml
crates/rat-ecosystem/src/: data_apis.rs  decision.rs  extra.rs  indicators.rs  lib.rs  main.rs  news.rs  onchain.rs  reasoning.rs  registry.rs  sentiment.rs  skills.rs  thinking.rs  web_tools.rs
crates/rat-exchange-client/: Cargo.toml
crates/rat-exchange-client/src/: lib.rs
crates/rat-indicators/: Cargo.toml
crates/rat-indicators/src/: behavioral_psychology.rs  correlation_checker.rs  funding_rate.rs  lib.rs  liquidity.rs  market_metrics_meter.rs  news_analyser.rs  on_chain_data.rs  options_surface.rs  order_flow.rs  pattern_retriever.rs  pivot_calculator.rs  regime_classifier.rs  regime_detector.rs  sentiment_analyzer.rs  support_resistance.rs  volatility_calculator.rs  volume_profile.rs
crates/rat-memory/: Cargo.toml
crates/rat-memory-client/: Cargo.toml
crates/rat-memory-client/src/: lib.rs
crates/rat-memory/src/: lib.rs
crates/rat-orchestrator/: Cargo.toml  README.md
crates/rat-orchestrator/src/: loops.rs  main.rs
crates/rat-pipeline/: Cargo.toml
crates/rat-pipeline/src/: lib.rs
crates/rat-reasoning/: Cargo.toml
crates/rat-reasoning/src/: agent_loop.rs  chain.rs  error.rs  got.rs  lib.rs  react.rs  reflexion.rs  self_consistency.rs  tot.rs  trading.rs
crates/rat-risk/: Cargo.toml
crates/rat-risk/src/: lib.rs
crates/rat-rules/: Cargo.toml
crates/rat-rules/src/: context.rs  lib.rs  rule.rs
crates/rat-runtime/: Cargo.toml  README.md
crates/rat-runtime/src/: active_learner.rs  api_clients.rs  engine.rs  goal_manager.rs  introspector.rs  lib.rs  live_broker.rs  paper_broker.rs  policy_cache.rs  portfolio_reasoner.rs  risk_manager.rs  (+1 more)
crates/rat-sentiment/: Cargo.toml
crates/rat-server/: Cargo.toml
crates/rat-skills/: Cargo.toml
crates/rat-strategies/: Cargo.toml
crates/rat-tui/: Cargo.toml
exchange/: Cargo.toml
exchange/exchange-frontend/: app.js  index.html  style.css
exchange/frontend/: app.js  futures.js  index.html  portfolio.js  styles.css  trading.js
exchange/migrations/: 001_initial_schema.sql  002_add_trigger_price_time_in_force.sql
exchange/src/: lib.rs  main.rs
(+751 files in other folders)
