[workspace]
resolver = "2"

members = [
    # ── Core ──
    "crates/cotrader-core",
    "crates/cotrader-autonomous",
    "crates/cotrader-orchestrator",
    "crates/cotrader-runtime",
    # ── Brokers ──
    "crates/cotrader-broker-binance",
    "crates/cotrader-broker-ibkr",
    "crates/cotrader-broker-zerodha",
    # ── Services ──
    "crates/cotrader-tui",
    # ── ML ──
    "crates/cotrader-ml",
    # ── Build automation ──
    "xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["CoTrader Contributors"]
repository = "https://github.com/varma/cotrader"
homepage = "https://github.com/varma/cotrader"
readme = "README.md"

[workspace.dependencies]
chrono = { version = ">=0.4.35, <0.4.40", features = ["serde"] }
ractor = "0.15"
