[package]
name = "tresdo-exchange"
version = "0.1.0"
edition = "2021"
description = "Tresdo Exchange - AI-powered multi-asset trading engine"

[lib]
name = "tresdo_exchange"
path = "src/lib.rs"

[[bin]]
name = "tresdo-exchange"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

[dev-dependencies]
tokio-test = "0.4"
