[package]
name = "cotrader-autonomous"
version.workspace = true
description = "cotrader-autonomous — 8 agents, pipeline, rules, episode store"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "cotrader-cli"
path = "src/bin/rat_cli.rs"

[dependencies]
cotrader-core = { path = "../cotrader-core", features = ["lancedb"] }
cotrader-ml = { path = "../cotrader-ml" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
toml = "0.8"

[dev-dependencies]
cotrader-broker-cotrader = { path = "../cotrader-broker-cotrader" }
