[package]
name = "cotrader-runtime"
version.workspace = true
description = "cotrader-runtime — CLI and daemon management"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cotrader-core = { path = "../cotrader-core" }
cotrader-autonomous = { path = "../cotrader-autonomous" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
libc = "0.2"
colored = "2"
clap_complete = "4"

[dev-dependencies]
cotrader-broker-cotrader = { path = "../cotrader-broker-cotrader" }

[[bin]]
name = "cotrader"
path = "src/bin/rat.rs"
