[package]
name = "cotrader-tui"
version.workspace = true
edition.workspace = true
description = "rat — Modern Terminal UI for autonomous trading. Component-based architecture with ratatui 0.30+."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true }
anyhow = "1"
tungstenite = "0.24"
arboard = "3"

[[bin]]
name = "cotrader-tui"
path = "src/main.rs"
