[package]
name = "rat-agents"
version.workspace = true
edition.workspace = true
description = "rat-agents — Agent decision-making, strategy, debate, and evolution"
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true }
async-trait = "0.1"
rat-core = { path = "../rat-core" }
rat-rules = { path = "../rat-rules" }
rat-autonomous = { path = "../rat-autonomous" }
agentic-memory = { path = "../../memory" }
uuid = "1"
