[package]
name = "rat-ecosystem"
version = "0.1.0"
description = "RAT Agent Ecosystem — 1000+ tools, skills, reasoning frameworks, thinking styles, decision models, and data API connectors"
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
