[package]
name = "rat-exchange-client"
version.workspace = true
description = "Rat Exchange API client — REST + WebSocket for order placement, market data, and portfolio management"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
thiserror = "1"
tracing = "0.1"
