[package]
name = "rat-memory-client"
version.workspace = true
description = "Agentic Memory client — REST API for storing and recalling trading decisions, lessons, and context"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
thiserror = "1"
tracing = "0.1"
