[package]
name = "rat-orchestrator"
version.workspace = true
description = "rat-orchestrator — Autonomous brain + HTTP API + loops (primary backend for rat Terminal UI)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
rat-core = { path = "../rat-core" }
rat-autonomous = { path = "../rat-autonomous" }
rat-runtime = { path = "../rat-runtime" }
rat-broker-zerodha = { path = "../rat-broker/rat-broker-zerodha" }
rat-broker-alpaca = { path = "../rat-broker/rat-broker-alpaca" }
rat-broker-upstox = { path = "../rat-broker/rat-broker-upstox" }
rat-broker-angelone = { path = "../rat-broker/rat-broker-angelone" }
rat-broker-5paisa = { path = "../rat-broker/rat-broker-5paisa" }
rat-eventbus = { path = "../rat-eventbus" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
lancedb = ["rat-core/lancedb"]
