[package]
name = "rat-reasoning"
version = "0.1.0"
description = "RAT Reasoning Engine — 7 composable reasoning chains for deterministic agent decision-making"
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
