[package]
name = "rat-rules"
version.workspace = true
edition.workspace = true
description = "rat-rules — Modular trading rules engine with priority-based enforcement"
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true }
async-trait = "0.1"
rat-core = { path = "../rat-core" }
