[package]
name = "rat-runtime"
version.workspace = true
description = "Unified runtime for rat — event-driven, multi-mode (paper/live/backtest/validate/research), production-grade"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rat-core = { path = "../rat-core" }
rat-autonomous = { path = "../rat-autonomous" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
rat-broker-zerodha = { path = "../rat-broker-zerodha" }
rat-broker-alpaca = { path = "../rat-broker-alpaca" }
rat-broker-upstox = { path = "../rat-broker-upstox" }
rat-broker-angelone = { path = "../rat-broker-angelone" }
rat-broker-5paisa = { path = "../rat-broker-5paisa" }

[features]
lancedb = ["rat-core/lancedb"]

[[bin]]
name = "rat"
path = "src/bin/rat.rs"
