[package]
name = "rat-sentiment"
version.workspace = true
edition.workspace = true
description = "rat-sentiment — Modular component system"
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true }
async-trait = "0.1"
