[package]
name = "rat-server"
version.workspace = true
description = "rat-server (optional production server)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
rat-core = { path = "../rat-core" }
rat-runtime = { path = "../rat-runtime" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
log = "0.4"
env_logger = "0.10"
tower = "0.4"
futures = "0.3"

[features]
lancedb = ["rat-core/lancedb"]
