[package]
name = "rat-skills"
version.workspace = true
edition.workspace = true
description = "rat-skills — Agent skills and tools (indicators, analyzers, scanners)"
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true }
async-trait = "0.1"
rat-core = { path = "../rat-core" }
rat-autonomous = { path = "../rat-autonomous" }
