[package]
name = "rat-tui"
version.workspace = true
edition.workspace = true
description = "rat — Modern Terminal UI for autonomous trading. Component-based architecture with ratatui 0.30+."
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { workspace = true }
anyhow = "1"
futures = "0.3"
tungstenite = "0.24"

[[bin]]
name = "rat-tui"
path = "src/main.rs"
